objects/vlocity_ins__PaymentMethod__c.object
<CustomObject>
    <description>Payment Method stores credit card or other payment processing information for an account.</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BankAccountNumber__c</fullName>
        <label>Bank Account Number</label>
        <length>80</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BankAccountType__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__BankRoutingNumber__c</fullName>
        <label>Bank Routing Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CardHolderName__c</fullName>
        <label>Card Holder Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CardNumber__c</fullName>
        <label>Card Number</label>
        <length>16</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CardType__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VISA</fullName>
                </value>
                <value>
                    <fullName>Master Card</fullName>
                </value>
                <value>
                    <fullName>DISCOVER</fullName>
                </value>
                <value>
                    <fullName>UCB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExpirationMonth__c</fullName>
        <label>Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExpirationYear__c</fullName>
        <label>Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Last4Numbers__c</fullName>
        <label>Last4Numbers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MethodType__c</fullName>
        <label>Payment Method Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank Account</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PaymentMethodToken__c</fullName>
        <label>Payment Method Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Payment Method</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nickname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>